Updated code to use generated schema
