# financetrackingbackend/src/main/java/com/financetrackingbackend/schemas/monzo/MonzoAccount.java
@@ -1,28 +1,0 @@
-package com.financetrackingbackend.schemas.monzo;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@NoArgsConstructor
-@AllArgsConstructor
-@Data
-public class MonzoAccount {
-    @JsonProperty("id")
-    private String id;
-    @JsonProperty("description")
-    private String description;
-    @JsonProperty("created")
-    private String created;
-    @JsonProperty("balance")
-    private float accountBalance;
-    @JsonProperty("total_balance")
-    private float totalBalance;
-    @JsonProperty("currency")
-    private String currency;
-    @JsonProperty("spend_today")
-    private int spendToday;
-    @JsonProperty("pots")
-    private MonzoPots pots;
-}
